hphp/test/zend/good/ext/curl/tests/bug52202.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('curl')) exit("skip curl extension not loaded");
}
